[Extension] Connect screens to page model "viewissues"

--- a/client/appmodel.json
+++ b/client/appmodel.json
@@ -27,5 +27,27 @@
         }
       }
     }
+  },
+  "viewissues": {
+    "type": "object",
+    "properties": {
+      "issueslist": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "string"
+            },
+            "summary": {
+              "type": "string"
+            },
+            "Category": {
+              "type": "string"
+            }
+          }
+        }
+      }
+    }
   }
 }
