--- a/client/appmodel.json
+++ b/client/appmodel.json
@@ -27,5 +27,34 @@
         }
       }
     }
+  },
+  "listviewissues": {
+    "type": "object",
+    "comment": "ListView",
+    "properties": {
+      "listItems": {
+        "type": "array",
+        "items": {
+          "type": "object",
+          "properties": {
+            "string": {
+              "type": "string",
+              "update": {
+                "type": "none"
+              }
+            },
+            "action": {
+              "type": "action"
+            },
+            "icon": {
+              "type": "string"
+            }
+          }
+        },
+        "update": {
+          "type": "none"
+        }
+      }
+    }
   }
 }
